file(GLOB srcs *)
list(REMOVE_ITEM srcs ${CMAKE_CURRENT_LIST_DIR}/CMakeLists.txt)
include_directories(${CMAKE_CURRENT_LIST_DIR})

foreach(src ${srcs})
  if(EXISTS ${src}/CMakeLists.txt)
    add_subdirectory(${src})
  elseif(NOT IS_DIRECTORY  ${src})
    get_filename_component(app ${src} NAME_WLE)
    add_executable(${app} WIN32 ${src})
  endif()
endforeach()
